# the-world-news-backend

./: Dockerfile  README.md  pyproject.toml
src/: Constants.py  main.py
src/services/: ScraperService.py
the_world_news_backend/: Constants.py  main.py
the_world_news_backend/services/: NewsScraperService.py
